--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 </form>
         </section><!-- /.section-form -->
         <div class="line1"></div>
-        <h5 style="font-weight: 1000; text-align: center;">Dheemahi Avishkars Technologies Pvt. Ltd , Copyright 2023 © Made With ❤ India</h5>
+        <h5 style="font-weight: 1000; text-align: center;">Dheemahi Avishkars Technologies Pvt. Ltd , Copyright 2023 © Made With ❤️ India</h5>
         <div class="line2"></div>
         <div class="line1"></div>
         
